--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,20 @@
+@import './fontello/css/fontello-embedded.css';
+
 // SCSS Files
 @import 'base';
 @import 'form';
+@import 'grid';
+
+body {
+  font-size: 11px;
+  background-color: #F1F1F1;
+  font-family: 'Roboto', sans-serif;
+}
 
 // application
+#root,
+#app-container {
+  min-height: 100vh;
+}
+
 @import 'partials/layout';
-// @import 'partials/header';
