🚧  add department selecteur

--- a/src/scss/partials/layout.scss
+++ b/src/scss/partials/layout.scss
@@ -48,6 +48,21 @@
   }
 }
 
+#selecteur-departement {
+  padding: 6px 12px;
+  top: 12px;
+  right: 12px;
+  height: 24px;
+  position: absolute;
+  border-radius: 12px;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
+
+  .icon {
+    margin-left: 12px;
+  }
+}
+
 /* ------------------------------------------------------------
 
 RESPONSIVE
