--- a/src/components/mockup/forms/form-navigation.css
+++ b/src/components/mockup/forms/form-navigation.css
@@ -19,3 +19,8 @@
   color: #000000;
   background-color: rgba(0, 0, 0, 0.05);
 }
+
+#form-navigation button span ~ .icon,
+#form-navigation button .icon ~ span {
+  margin-left: 12px;
+}
