--- a/src/scss/partials/layout.scss
+++ b/src/scss/partials/layout.scss
@@ -25,8 +25,9 @@
 }
 
 #app-footer {
+  width: 100%;
   padding: 10px;
-  margin: auto 0;
+  margin: auto auto 0 auto;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
