--- a/src/scss/partials/layout.scss
+++ b/src/scss/partials/layout.scss
@@ -27,6 +27,7 @@
 #app-footer {
   width: 100%;
   padding: 10px;
+  max-height: 33px; // height text + padding
   margin: auto auto 0 auto;
   background-color: rgba(0, 0, 0, 0.1);
 }
