--- a/src/scss/partials/layout.scss
+++ b/src/scss/partials/layout.scss
@@ -30,6 +30,10 @@
   max-height: 33px; // height text + padding
   margin: auto auto 0 auto;
   background-color: rgba(0, 0, 0, 0.1);
+
+  .right a ~ a {
+    margin-left: 12px;
+  }
 }
 
 /* ---- THEME ----- */
