--- a/src/scss/partials/map.scss
+++ b/src/scss/partials/map.scss
@@ -2,6 +2,10 @@
   width: 100%;
   height: 320px;
   background-color: #C4C4C4;
+
+  & ~ .flex1 {
+    margin-left: 20px;
+  }
 }
 
 .leaflet-container {
