🚧  fetch data from grapql to hydrate contributors table

--- a/admin/src/scss/modules/theme.scss
+++ b/admin/src/scss/modules/theme.scss
@@ -5,3 +5,15 @@
     color: #FFFFFF;
   }
 }
+
+/*
+.default-theme {
+  .nav {
+    color: #363943
+    color: #2BD1C0
+    color: #EEEEEE
+    // source sans pro
+  }
+}
+#
+*/
