--- a/admin/src/scss/_form.scss
+++ b/admin/src/scss/_form.scss
@@ -1,3 +1,8 @@
+::-webkit-autofill {
+  // -webkit-box-shadow: 0 0 0 30px white inset;
+  // -webkit-text-fill-color: green !important;
+}
+
 ::-webkit-search-decoration {
   display: none;
 }
