--- a/admin/src/scss/modules/form.scss
+++ b/admin/src/scss/modules/form.scss
@@ -1,21 +1,34 @@
 input[type='text'] {
-  padding: 7px;
+  font-size: 1.2em;
+  padding: 12px 7px;
+  border-width: 1px;
   border-radius: 4px;
-  border: 1px solid #000000;
+  border-style: solid;
+  background-color: #FFFFFF;
+  border-color: rgba(0, 0, 0, 0.2);
 }
 
-button[type='submit'] {
+button {
   padding: 7px;
   border: none;
   border-radius: 4px;
-  background-color: #2BD1C0;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
-fieldset label {
-  @extend .flex-rows;
+legend {
+  padding: 5px 24px;
+  font-weight: normal !important;
+}
 
-  span {
-    padding: 7px;
+fieldset {
+  padding: 12px;
+
+  label {
+    @extend .flex-rows;
+
+    span {
+      padding: 7px;
+    }
   }
 }
 
@@ -32,10 +45,4 @@ fieldset.inline label {
   input {
     flex: 2;
   }
-}
-
-.button-big {
-  padding: 12px;
-  font-size: 1.2em;
-  min-width: 120px;
 }
