🚧  update dashboard forms

--- a/admin/src/scss/_margin.scss
+++ b/admin/src/scss/_margin.scss
@@ -2,11 +2,24 @@
   margin-top: 20px;
 }
 
+.mt40 {
+  margin-top: 40px;
+}
+
 .mb20 {
   margin-bottom: 20px;
+}
+
+.mb40 {
+  margin-bottom: 40px;
 }
 
 .my20 {
   @extend .mt20;
   @extend .mb20;
+}
+
+.my40 {
+  @extend .mt40;
+  @extend .mb40;
 }
