--- a/admin/src/scss/_form.scss
+++ b/admin/src/scss/_form.scss
@@ -41,11 +41,13 @@ textarea {
 }
 
 input,
+select,
 textarea {
   box-sizing: content-box;
 }
 
-input:focus {
+input:focus,
+select:focus {
   outline: 0;
   background-color: transparent;
 }
@@ -72,6 +74,9 @@ input[type='submit'] {
 
 textarea {
   overflow: auto;
+  resize: vertical;
+  min-height: 2.4em;
+  line-height: 1.2em;
   vertical-align: top;
 }
 
