--- a/admin/src/scss/modules/form.scss
+++ b/admin/src/scss/modules/form.scss
@@ -31,29 +31,17 @@ legend {
 
 fieldset {
   padding: 12px;
-
-  label {
-    @extend .flex-rows;
-
-    span {
-      padding: 7px;
-    }
-  }
 }
 
-fieldset.inline label {
-  @extend .flex-columns;
+fieldset label,
+fieldset .as-form-label {
+  @extend .flex-rows;
+}
 
-  span {
-    @extend .aright;
-
-    flex: 1;
-    max-width: 150px;
-  }
-
-  input {
-    flex: 2;
-  }
+fieldset label span,
+fieldset .as-form-label span {
+  padding: 7px;
+  font-weight: bold;
 }
 
 .selectbox {
@@ -70,5 +58,33 @@ fieldset.inline label {
   select,
   select option {
     width: 100%;
+  }
+}
+
+.arrayvalues {
+  border-width: 1px;
+  border-radius: 4px;
+  border-style: solid;
+  padding: 0 12px 12px 12px;
+  border-color: rgba(0, 0, 0, 0.2);
+
+  .list {
+    max-height: 260px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
+  .item {
+    width: 100%;
+  }
+
+  .item input {
+    flex: 1;
+  }
+
+  .item button {
+    flex: 0;
+    min-width: 42px;
+    margin-left: 12px;
   }
 }
