--- a/admin/src/scss/modules/theme.scss
+++ b/admin/src/scss/modules/theme.scss
@@ -32,6 +32,11 @@ textarea:disabled {
   opacity: 0.5;
 }
 
+button:not(:disabled) {
+  color: #FFFFFF;
+  background-color: #2BD1C0;
+}
+
 #application-header {
   color: #FFFFFF;
   // stylelint-disable-next-line
