--- a/admin/src/scss/_margin.scss
+++ b/admin/src/scss/_margin.scss
@@ -1,9 +1,21 @@
-.mt20 {
-  margin-top: 20px;
+.mt0 {
+  margin-top: 0;
 }
 
-.mt40 {
-  margin-top: 40px;
+.mb0 {
+  margin-bottom: 0;
+}
+
+.mt12 {
+  margin-top: 12px;
+}
+
+.mb12 {
+  margin-bottom: 12px;
+}
+
+.mt20 {
+  margin-top: 20px;
 }
 
 .mb20 {
@@ -12,6 +24,20 @@
 
 .mb40 {
   margin-bottom: 40px;
+}
+
+.mt40 {
+  margin-top: 40px;
+}
+
+.my0 {
+  @extend .mt0;
+  @extend .mb0;
+}
+
+.my12 {
+  @extend .mt12;
+  @extend .mb12;
 }
 
 .my20 {
