--- a/admin/src/scss/_table.scss
+++ b/admin/src/scss/_table.scss
@@ -25,18 +25,18 @@ td:last-child {
   border-right: 0;
 }
 
-.btn-cell {
-  width: 61px;
-  max-width: 61px;
+.small {
+  width: 70px;
+  max-width: 70px;
   text-align: center;
 }
 
-.btn-cell .button {
+.small .button {
   width: auto;
   padding: 7px;
 }
 
-.select-cell {
+.medium {
   width: 200px;
   max-width: 200px;
 }
