--- a/admin/src/scss/modules/base.scss
+++ b/admin/src/scss/modules/base.scss
@@ -1,7 +1,9 @@
+::placeholder {
+  font-size: 0.8em;
+}
+
 body {
   font-size: 12px;
-  // font-family: 'Roboto', sans-serif;
-  font-family: 'Source Sans Pro', sans-serif;
 }
 
 span + .icon,
