--- a/admin/src/scss/_grid.scss
+++ b/admin/src/scss/_grid.scss
@@ -18,6 +18,12 @@
   flex: 4;
 }
 
+/* --------------------------------------------
+
+ COLUMNS
+
+-------------------------------------------- */
+
 .col100 {
   flex: 1;
   min-width: 100%;
@@ -26,4 +32,11 @@
 .col50 {
   flex: 1;
   min-width: 48%;
+}
+
+.col0 {
+  flex: 1;
+  width: 0;
+  min-width: 0;
+  max-width: 0;
 }
