--- a/admin/src/scss/styles.scss
+++ b/admin/src/scss/styles.scss
@@ -2,16 +2,19 @@
 @import './fontello/css/fontello-embedded.css';
 
 // SCSS Files
+@import 'theme';
 @import 'base';
 @import 'text';
 @import 'form';
 @import 'grid';
 @import 'table';
 @import 'margin';
+@import 'popins';
 @import 'borders';
 @import 'paddings';
 
 // application
 @import './modules/base.scss';
 @import './modules/form.scss';
+@import './modules/popin.scss';
 @import './modules/theme.scss';
