--- a/admin/src/scss/modules/base.scss
+++ b/admin/src/scss/modules/base.scss
@@ -3,18 +3,12 @@
 }
 
 body {
-  font-size: 12px;
+  font-weight: 300;
 }
 
 span + .icon,
 .icon + span {
   margin-left: 7px;
-}
-
-.button-big {
-  font-size: 1.2em;
-  min-width: 120px;
-  padding: 17px 35px;
 }
 
 .page-content {
@@ -26,9 +20,40 @@ span + .icon,
  LAYOUTS
 
 ------------------------------------------------ */
-#root,
-#app-container {
+#root {
   min-height: 100vh;
+}
+
+#body-scroller {
+  height: 100vh !important;
+  background-color: #E8E8E8;
+}
+
+#body-scroller-content {
+  @extend .flex-rows;
+
+  min-height: 100%;
+  margin-right: 10px;
+  background-color: #FFFFFF;
+  border-right: 1px solid #E7E7E7;
+}
+
+#application-header {
+  height: 85px;
+  max-height: 85px;
+  min-height: 85px;
+  padding: 20px 20px 20px 65px;
+}
+
+#application-header .title {
+  font-weight: normal;
+  letter-spacing: 0.4em;
+}
+
+#page-title {
+  .badge {
+    font-size: 0.6em;
+  }
 }
 
 #page-column-header {
