🚧  💅  update admin UI

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -17,3 +17,4 @@
 .icon-info-circled:before { content: '\e80f'; } /* '' */
 .icon-network:before { content: '\e810'; } /* '' */
 .icon-tag:before { content: '\e811'; } /* '' */
+.icon-logout:before { content: '\e812'; } /* '' */
