🚧  [ADMIN] ajout des pages alertes et contributeurs

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -18,3 +18,4 @@
 .icon-network:before { content: '\e810'; } /* '' */
 .icon-tag:before { content: '\e811'; } /* '' */
 .icon-logout:before { content: '\e812'; } /* '' */
+.icon-alert:before { content: '\e813'; } /* '' */
