--- a/admin/src/fontello/css/fontello.css
+++ b/admin/src/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?37435704');
-  src: url('../font/fontello.eot?37435704#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?37435704') format('woff2'),
-       url('../font/fontello.woff?37435704') format('woff'),
-       url('../font/fontello.ttf?37435704') format('truetype'),
-       url('../font/fontello.svg?37435704#fontello') format('svg');
+  src: url('../font/fontello.eot?94129894');
+  src: url('../font/fontello.eot?94129894#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?94129894') format('woff2'),
+       url('../font/fontello.woff?94129894') format('woff'),
+       url('../font/fontello.ttf?94129894') format('truetype'),
+       url('../font/fontello.svg?94129894#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?37435704#fontello') format('svg');
+    src: url('../font/fontello.svg?94129894#fontello') format('svg');
   }
 }
 */
@@ -74,3 +74,4 @@
 .icon-network:before { content: '\e810'; } /* '' */
 .icon-tag:before { content: '\e811'; } /* '' */
 .icon-logout:before { content: '\e812'; } /* '' */
+.icon-alert:before { content: '\e813'; } /* '' */
