🚧  update fontello fonts

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -19,3 +19,4 @@
 .icon-tag:before { content: '\e811'; } /* '' */
 .icon-logout:before { content: '\e812'; } /* '' */
 .icon-alert:before { content: '\e813'; } /* '' */
+.icon-database:before { content: '\e814'; } /* '' */
