--- a/frontend/src/scss/partials/layout.scss
+++ b/frontend/src/scss/partials/layout.scss
@@ -1,10 +1,21 @@
+// application
+#root,
+#app-container {
+  min-height: 100vh;
+}
+
 #app-header {
-  padding: 45px 0;
+  padding: 20px 0;
   background-color: rgba(0, 0, 0, 0.1);
+
+  .title {
+    letter-spacing: 0.4em;
+  }
 
   .title,
   .subtitle {
     margin: 0;
+    font-weight: normal;
   }
 }
 
@@ -58,12 +69,10 @@
   top: 12px;
   right: 12px;
   height: 24px;
-  font-weight: 900;
-  padding: 6px 12px;
+  font-weight: 100;
+  padding: 4px 12px;
   position: absolute;
   border-radius: 12px;
-  background-color: #01BCD5;
-  color: rgba(0, 0, 0, 0.5);
 
   .icon {
     margin-left: 12px;
